[package]
name = "quantum_scanner"
version = "0.1.0"
edition = "2021"
authors = ["Hamb0n3"]
description = "Advanced port scanner with evasion capabilities"

[[bin]]
name = "quantum_scanner"
path = "src/main.rs"

# Enable link-time optimization for smaller binary size
# Modified to make safer static builds
[profile.release]
lto = "thin"  # Use thin LTO instead of fat LTO
codegen-units = 1
opt-level = 2  # Reduced optimization level for better stability
strip = false  # Let the build script handle stripping
panic = "unwind"  # Use unwinding for better error information

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Network packet manipulation
pnet = "0.33.0"
pnet_macros_support = "0.33.0"
pnet_packet = "0.33.0"
pnet_sys = "0.33.0"
socket2 = "0.5.3"

# TLS/SSL support
rustls = { version = "0.21.0", features = ["dangerous_configuration", "tls12"] }
rustls-pemfile = "1.0.2"
webpki-roots = "0.25.2"
x509-parser = { version = "0.15.0", optional = true }

# Cryptography
sha2 = { version = "0.10.6" }
aes-gcm = { version = "0.10.2" }
argon2 = { version = "0.5.0", optional = true }
zeroize = { version = "1.6.0", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }

# Terminal UI
indicatif = "0.17.3"
console = "0.15.5"
dialoguer = "0.10.4"
crossterm = "0.26.1"
colored = "2.0.0"

# File system and security
tempfile = "3.5.0"
# Need to enable these features for secure random and password generation
rand = { version = "0.8.5", features = ["std", "std_rng"] }

# String processing
regex = "1.5.4"

# Utility
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde", "clock"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
parking_lot = "0.12.1"
libc = "0.2.139"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Concurrency
futures = "0.3.28"
async-trait = "0.1.68"

# Networking extras - replaced trust-dns with hickory-dns
hickory-resolver = { version = "0.24.0", features = ["dns-over-rustls", "system-config", "tokio-runtime"] }
ipnet = "2.7.2"
cidr-utils = "0.5.10"

[features]
default = ["minimal-static", "insecure-tls"]
full = ["x509-parser", "enhanced-crypto", "secure-memory"]
minimal-static = []
secure-memory = ["zeroize"]
enhanced-crypto = ["argon2", "chacha20poly1305"]
insecure-tls = []

# Add a build.rs script to set up build environment
[build-dependencies]
cc = "1.0"
