[package]
name = "quantum_scanner"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Advanced port scanner with evasion capabilities"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Network packet manipulation
pnet = "0.33.0"
pnet_macros_support = "0.33.0"
pnet_packet = "0.33.0"
socket2 = "0.5.3"

# TLS/SSL support
rustls = "0.21.0"
rustls-pemfile = "1.0.2"
webpki-roots = "0.23.0"
x509-parser = "0.15.0"

# Terminal UI
indicatif = "0.17.3"
console = "0.15.5"
dialoguer = "0.10.4"
crossterm = "0.26.1"

# Utility
clap = { version = "4.2.7", features = ["derive"] }
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
parking_lot = "0.12.1"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Concurrency
futures = "0.3.28"
async-trait = "0.1.68"

# Networking extras
trust-dns-resolver = "0.22.0"
ipnet = "2.7.2"
cidr-utils = "0.5.10"
